--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ ul {
     align-items: center;
 }
 
-.logo {
-  font-size: 24px;
+img {
+    width: 300px;
 }
 
 .wrapper {
@@ -32,4 +32,39 @@ ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin: 0 0 20px;
+}
+
+.card {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 20px;
+    height: 400px;
+}
+
+.main-text {  
+    margin: 0 0 8px;
+    font-size: 48px;
+    font-weight: 800;
+}
+
+.text   {
+    margin-bottom: 18px;
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+}
+
+.main-button {
+    background-color: #3882F6;
+    color: white;
+    padding: 10px;
+    border-radius: 8px;
+    width: 115px;
+    border: 0;
+}
+
+.sec-text {
+    color: #E5E7EB;
 }
